# GLOBe

./: .buildinfo  .gitignore  MANIFEST.in  README.md  extensions.py  genindex.html  globe.html  gob.html  index.html  local_compile.sh  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  test_globe_tools.py  test_optimizers.py
.github/workflows/: build.yml  build_doc.yml
_sources/: gob.rst.txt
_sources/source/benchmarks/: index.rst.txt
_sources/source/benchmarks/multimodal/: globe.Ackley.rst.txt  globe.Deb.rst.txt  globe.Griewank.rst.txt  globe.Langermann.rst.txt  globe.Levy.rst.txt  globe.Michalewicz.rst.txt  globe.PyGKLS.rst.txt  globe.Rastrigin.rst.txt  globe.Schwefel.rst.txt  globe.Styblinskitang.rst.txt  gob.Ackley.rst.txt  gob.Deb.rst.txt  gob.Griewank.rst.txt  gob.Langermann.rst.txt  gob.Levy.rst.txt  gob.Michalewicz.rst.txt  gob.PyGKLS.rst.txt  gob.Rastrigin.rst.txt  gob.Schwefel.rst.txt  gob.Styblinskitang.rst.txt  index.rst.txt
_sources/source/benchmarks/unimodal/: globe.Bentcigar.rst.txt  globe.Dixonprice.rst.txt  globe.Hyperellipsoid.rst.txt  globe.Rosenbrock.rst.txt  globe.Square.rst.txt  globe.Sumpow.rst.txt  globe.Trid.rst.txt  globe.Zakharov.rst.txt  gob.Bentcigar.rst.txt  gob.Dixonprice.rst.txt  gob.Hyperellipsoid.rst.txt  gob.Rosenbrock.rst.txt  gob.Square.rst.txt  gob.Sumpow.rst.txt  gob.Trid.rst.txt  gob.Zakharov.rst.txt  index.rst.txt
_sources/source/metrics/: globe.Proportion.rst.txt  globe.f_target.rst.txt  index.rst.txt
_sources/source/optimizers/: index.rst.txt
_sources/source/optimizers/decision/: globe.AdaLIPO_P.rst.txt  globe.AdaRankOpt.rst.txt  globe.ECP.rst.txt  gob.AdaLIPO_P.rst.txt  gob.ECP.rst.txt  index.rst.txt
_sources/source/optimizers/misc/: globe.BayesOpt.rst.txt  globe.CMA_ES.rst.txt  globe.CRS.rst.txt  globe.Direct.rst.txt  globe.GD.rst.txt  globe.MLSL.rst.txt  globe.PRS.rst.txt  gob.BayesOpt.rst.txt  index.rst.txt
docs/: conf.py  gen_doc_files.py  globe.rst  index.rst  quickstart.md
exps/notebooks/: exploration.ipynb  fig.typ  visual_exp.ipynb
exps/notebooks/exploration/: exploration.ipynb  fig.typ
exps/notebooks/fun_vis/: fig1.typ  fig2.typ  fun_vis.ipynb
globe/: __init__.py  globe.py
globe/benchmarks/: __init__.py
globe/benchmarks/multimodal/: deb.py  levy.py  michalewicz.py  pygkls.py  schwefel.py  styblinskitang.py
globe/benchmarks/unimodal/: rosenbrock.py  sumpow.py  zakharov.py
globe/optimizers/: __init__.py
globe/optimizers/cpp_optimizers/: CMakeLists.txt  cpp_optimizers.pyx
globe/optimizers/cpp_optimizers/include/optimizers/decision/: AdaRankOpt.hh  decision.hh
globe/optimizers/cpp_optimizers/include/optimizers/particles/: CBO.hh  Full_Noise.hh  Langevin.hh  PSO.hh  SBS.hh  particles_optimizer.hh  schedulers.hh
globe/optimizers/cpp_optimizers/include/optimizers/particles/common-noise/GCN/: GCN_CBO.hh  GCN_Langevin.hh  GCN_PSO.hh  GCN_SBS.hh
globe/optimizers/cpp_optimizers/include/optimizers/particles/common-noise/SMD/: SMD_CBO.hh  SMD_Langevin.hh  SMD_PSO.hh  SMD_SBS.hh
globe/optimizers/cpp_optimizers/include/optimizers/particles/filtering/: filtering.hh
globe/optimizers/cpp_optimizers/src/optimizers/decision/: AdaLIPO_P.cc  ECP.cc
globe/optimizers/cpp_optimizers/src/optimizers/particles/: particles_optimizer.cc
globe/optimizers/cpp_optimizers/src/optimizers/particles/filtering/: filter.cc
globe/optimizers/decision/: AdaRankOpt.py  ECP.py  decision_optimizer.py
globe/optimizers/misc/: GD.py
globe/optimizers/particles/: CBO.py  Full_Noise.py  Langevin.py  MSGD.py  PSO.py  SBS.py  particles_optimizer.py
gob.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gob/benchmarks/multimodal/: ackley.py  griewank.py  langermann.py  rastrigin.py
gob/benchmarks/unimodal/: bentcigar.py  dixonprice.py  hyperellipsoid.py  square.py  trid.py
gob/optimizers/: __init__.py
gob/optimizers/decision/: AdaLIPO_P.py  decision_optimizer.py
source/benchmarks/: index.html
source/benchmarks/multimodal/: globe.Ackley.html  globe.Deb.html  globe.Griewank.html  globe.Langermann.html  globe.Levy.html  globe.Michalewicz.html  globe.PyGKLS.html  globe.Rastrigin.html  globe.Schwefel.html  globe.Styblinskitang.html  gob.Ackley.html  gob.Deb.html  gob.Griewank.html  gob.Langermann.html  gob.Levy.html  gob.Michalewicz.html  gob.PyGKLS.html  gob.Rastrigin.html  gob.Schwefel.html  gob.Styblinskitang.html  index.html
source/benchmarks/unimodal/: globe.Bentcigar.html  globe.Dixonprice.html  globe.Hyperellipsoid.html  globe.Rosenbrock.html  globe.Square.html  globe.Sumpow.html  globe.Trid.html  globe.Zakharov.html  gob.Bentcigar.html  gob.Dixonprice.html  gob.Hyperellipsoid.html  gob.Rosenbrock.html  gob.Square.html  gob.Sumpow.html  gob.Trid.html  gob.Zakharov.html  index.html
source/metrics/: globe.Proportion.html  globe.f_target.html  gob.Proportion.html  gob.f_target.html  index.html
source/optimizers/: index.html
source/optimizers/decision/: globe.AdaLIPO_P.html  globe.AdaRankOpt.html  globe.ECP.html  gob.AdaLIPO_P.html  gob.AdaRankOpt.html  gob.ECP.html  index.html
source/optimizers/misc/: globe.BayesOpt.html  globe.CMA_ES.html  globe.CRS.html  globe.Direct.html  globe.GD.html  globe.MLSL.html  globe.PRS.html  gob.BayesOpt.html  gob.CMA_ES.html  gob.CRS.html  gob.Direct.html  gob.GD.html  gob.MLSL.html  gob.PRS.html  index.html
source/optimizers/particles/: globe.CBO.html  globe.Full_Noise.html  globe.GCN_CBO.html  globe.GCN_Langevin.html  globe.GCN_MSGD.html  globe.GCN_PSO.html  globe.GCN_SBS.html  globe.Langevin.html  globe.MSGD.html  globe.PSO.html  globe.SBS.html  globe.SMD_CBO.html  globe.SMD_Langevin.html  globe.SMD_MSGD.html  globe.SMD_PSO.html  globe.SMD_SBS.html  gob.CBO.html  gob.Full_Noise.html  gob.GCN_CBO.html  gob.GCN_Langevin.html  gob.GCN_MSGD.html  gob.GCN_PSO.html  gob.GCN_SBS.html  gob.Langevin.html  gob.MSGD.html  gob.PSO.html  gob.SBS.html  gob.SMD_CBO.html  gob.SMD_Langevin.html  gob.SMD_MSGD.html  gob.SMD_PSO.html  gob.SMD_SBS.html  index.html
tests/: test_gob_tools.py  test_optimizers.py
(+30 files in other folders)
